# qospeedtest

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  qospeedtest  qospeedtest-server  setup.py  tox.ini
.github/workflows/: ci.yml  pre-commit.yml  registry.yml
lib/qospeedtest/: __init__.py  cli.py  client.py  server.py  wsgi.py
lib/qospeedtest/server/: __init__.py  wsgi.py
tests/: test_utils.py
