# SPDX-PackageName: qospeedtest
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://github.com/rfinnie/qospeedtest
# SPDX-FileCopyrightText: © 2019 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MPL-2.0

[project]
name = "qospeedtest"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "Quick-and-Dirty OoklaServer Speed Test"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MPL-2.0"}
dependencies = [
    "requests",
    "PyYAML",
]
dynamic = ["version"]

[project.optional-dependencies]
gunicorn = ["gunicorn"]

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]

[project.scripts]
qospeedtest = "qospeedtest.client:main"
qospeedtest-server = "qospeedtest.server:main"

[tool.black]
line-length = 132
